added the option to set the scheduler type
specify which scheduler to use: constant, linear, polynomial, etc.

--- a/config/examples/train_lora_flux_schnell_24gb.yaml
+++ b/config/examples/train_lora_flux_schnell_24gb.yaml
@@ -41,6 +41,7 @@ config:
         train_text_encoder: false  # probably won't work with flux
         gradient_checkpointing: true  # need the on unless you have a ton of vram
         noise_scheduler: "flowmatch" # for training only
+        lr_scheduler: "constant"
         optimizer: "adamw8bit"
         lr: 1e-4
         # uncomment this to skip the pre training sample
